
<!--

This pom executes a maven target on ALL the (eclipse) features that compose the different Modelio distribution.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.modelio</groupId>
	<artifactId>modelio-parent</artifactId>
	<version>5.4.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>2.2.0</tycho-version>
		<tycho-groupid>org.eclipse.tycho</tycho-groupid>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<javadesigner.annotation.version>2.2.0</javadesigner.annotation.version>

		<modelio.rootFolder>Modelio 5.4.1</modelio.rootFolder>
		<modelio.version>5.4.1-SNAPSHOT</modelio.version>
		<newVersion>5.4.1</newVersion>
		<modelio.ws.path>${project.basedir}/${project.parent.relativePath}</modelio.ws.path>
	</properties>
	

	<repositories>
				<!-- Eclipse RCP platform -->
        <repository>
          <id>modelio</id>
          <url>https://repository.modelio.org</url>
        </repository>
				<repository>
					<id>rcp-Eclipse</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/rcp-eclipse/eclipse</url>
				</repository>
				<repository>
					<id>rcp-Eclipse-fr</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/rcp-eclipse/eclipse-fr</url>
				</repository>
				<repository>
					<id>SWT</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/rcp-eclipse/swt</url>
				</repository>
		
				<!-- Third-party Libraries re-packaged by Modeliosoft or Modeliosoft libraries -->
				<repository>
					<id>jaxb</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/javax/jaxb</url>
				</repository>
				<repository>
					<id>astyle</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/org.astyle/astyle</url>
				</repository>
				<repository>
					<id>tika</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/apache/tika</url>
				</repository>
				<repository>
					<id>jena</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/apache/jena</url>
				</repository>
				<repository>
					<id>xerces</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/apache/xerces</url>
				</repository>
				<repository>
					<id>oauth</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/oauth/oauth</url>
				</repository>
				<repository>
					<id>praticalxml</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/sf-practicalxml/praticalxml</url>
				</repository>
				<repository>
					<id>jdbm</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/modelio-integ/org.jdbm/jdbm</url>
				</repository>
		
				<!-- Third-party libraries  -->
				<repository>
					<id>log4j</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/apache/log4j</url>
				</repository>
				<repository>
					<id>logback</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/ch.qos/logback</url>
				</repository>
				<repository>
					<id>commons-compress</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/apache/commons-compress</url>
				</repository>
				<repository>
					<id>commons-lang</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/apache/commons-lang</url>
				</repository>
				<repository>
					<id>freemarker</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/apache/freemarker</url>
				</repository>
				<repository>
					<id>nebula-nattable</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/nebula-nattable</url>
				</repository>
				<repository>
					<id>nebula-incubator</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/nebula-incubator</url>
				</repository>
				<repository>
					<id>nebula</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/nebula</url>
				</repository>
				<repository>
					<id>gef-draw2d</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/gef-draw2d</url>
				</repository>
				<repository>
					<id>uml2</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/uml2</url>
				</repository>
				<repository>
					<id>emf</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.eclipse/emf</url>
				
				</repository>		
				<repository>
					<id>slf4j</id>
					<layout>p2</layout>
					<url>file://${modelio.ws.path}/dev-platform/rcp-target/org.slf4j/slf4j</url>
				</repository>
		<repository>
			<id>openjdk-jre11</id>
			<layout>p2</layout>
			<url>file://${modelio.ws.path}/dev-platform/pack-resources/openjdk-jre11</url>
		</repository>
	</repositories>

<build>
		<plugins>
		
		
		
		<plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>5.34.0</version>
        <configuration>
          
          <activeRecipes>
            <recipe>org.openrewrite.java.migrate.jakarta.JavaxInjectMigrationToJakartaInject</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>2.18.1</version>
          </dependency>
        </dependencies>
      </plugin>

			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
				<configuration>
					<resolver>p2</resolver>
				</configuration>
			</plugin>

			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<useProjectSettings>true</useProjectSettings>
					<extraClasspathElements>
						<extraClasspathElement>
							<groupId>org.modelio</groupId>
							<artifactId>javadesigner</artifactId>
							<version>${javadesigner.annotation.version}</version>
						</extraClasspathElement>
					</extraClasspathElements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>org.modelio</groupId>
							<artifactId>rcp</artifactId>
							<version>5.4.1-SNAPSHOT</version>
						</artifact>
					</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<strictVersions>false</strictVersions>
					<strictBinIncludes>true</strictBinIncludes>
					<archive>
						<!-- don't create the maven directory (descriptor files) in META-INF -->
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>${tycho-groupid}</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useProjectSettings>true</useProjectSettings>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>${tycho-groupid}</groupId>
					<artifactId>tycho-source-plugin</artifactId>
					<version>${tycho-version}</version>
					<executions>
						<execution>
							<id>attach-source</id>
							<phase>process-classes</phase>
							<goals>
								<goal>plugin-source</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>target-platform-validation-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<checkProvisioning>true</checkProvisioning>
						<checkDependencies>true</checkDependencies>
						<targetFiles>
							<targetFile>rcp.target</targetFile>
						</targetFiles>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>

